# palephone

./: .env.example  .gitignore  .trivyignore  ANDROID_SETUP.md  API.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  CLAUDE.md  DBA_REVIEW.md  Dockerfile.pale-server  FEATURE_ALIGNMENT_PLAN.md  IOS_SETUP.md  README.md  TESTING_PLAN.md  UI_UX_SPEC.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  turnserver.conf  vite.config.ts
.claude/: settings.json
.claude/agents/: explore.md
.claude/rules/: coding.md  project.md
.claude/skills/: audit.md  validate.md
.github/workflows/: android.yml  ci.yml  compose-smoke.yml  image-scan.yml  ios.yml  pale-server.yml  release.yml
deploy/: README.md
deploy/caddy/: Caddyfile
deploy/k8s/: README.md  configmap.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pale-server.yaml  postgres.yaml  secrets.example.yaml
deploy/livekit/: livekit.yaml
docs/: MILESTONES.md  NEXT_STEPS.md
docs/deploy/: PRODUCTION.md  android-fleet.md  desktop-fleet.md  dlp-lab.md  e911-lab.md  ha.md  ios-gate.md  linux.md  pstn-lab.md  regulated-midmarket.env.example  secrets-rotation.md  sso-oidc.md  storage-atp.md  windows.md
docs/evidence/: RM-500-TEMPLATE.md
docs/procurement/: IMPLEMENTATION_BACKLOG.md  TEAMS_PARITY.md
packaging/android/: README.md  pale-sideload.jks
packaging/windows/server/: Configure-PaleServer.ps1  PaleServer.iss  README.md  Run-PaleServer.ps1  THIRD_PARTY_NOTICES.txt
public/: manifest.webmanifest  sw.js
scripts/: android-inject-media.sh  backup.sh  compliance-smoke.sh  export-evidence-pack.sh  generate-secrets.sh  install-pale-server.sh  restore-drill.sh  sign-android-apk.sh  smoke-test.sh
scripts/load/: README.md  chat-burst.sh  meeting-join-storm.sh  sse-fanout.sh
site/landing/: index.html
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/android/: PaleJni.kt  PaleVideoOverlay.kt  SipForegroundService.kt
src-tauri/capabilities/: android.json  default.json  ios.json
src-tauri/crates/pale-core/: Cargo.toml
src-tauri/crates/pale-core/src/: android_jni.rs  android_video.rs  call_history.rs  config.rs  credential_store.rs  engine.rs  error.rs  events.rs  lib.rs  types.rs
src-tauri/crates/pale-matrix/: Cargo.toml
src-tauri/crates/pale-matrix/src/: client.rs  events.rs  lib.rs  types.rs
src-tauri/crates/pale-server/: Cargo.toml
src-tauri/crates/pale-server/migrations/: 001_initial_schema.sql  002_rooms_search_receipts_avatars.sql  003_voicemail_recordings.sql  004_dba_fixes.sql  005_user_auth.sql  006_call_routing.sql  007_voicemail_followme.sql  008_pbx_features.sql  009_call_center.sql  010_extension_user_link.sql  011_call_center_enterprise.sql  012_chat_enterprise.sql  013_comprehensive_routing.sql  014_user_uniqueness.sql  015_room_call_metadata.sql  016_business_collaboration.sql  016_room_message_mentions.sql  018_file_governance.sql  019_meeting_lifecycle.sql  020_channel_governance.sql  020_recording_governance.sql  021_message_priority_saved.sql  023_call_policy.sql  023_identity_lifecycle.sql  024_chat_enterprise_parity.sql  024_information_barriers.sql  024_mfa_sessions_certauth.sql  025_approvals.sql  025_sensitivity_labels.sql  026_recording_policies_hold_music.sql  028_custom_roles.sql  028_policy_packages.sql  029_meeting_templates.sql  031_meeting_enterprise_parity.sql  032_file_versioning_folders.sql  036_personal_call_groups.sql  036_sso_providers.sql  038_admin_elevations.sql  038_encryption_config.sql  038_task_boards.sql  (+32 more)
src-tauri/crates/pale-server/src/: cli.rs  http.rs  ldap_auth.rs  lib.rs  livekit.rs  main.rs  metrics.rs  pg_store.rs  pjsip_runtime.rs  sip.rs  storage.rs  storage_backend.rs  voicemail_media.rs  web_push.rs
src-tauri/crates/pjsip-sys/: Cargo.toml  build.rs  wrapper.h
src-tauri/crates/pjsip-sys/android/: pale_android_jni.c
src-tauri/crates/pjsip-sys/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/components/admin/: AdminView.tsx
src/components/auth/: MatrixLoginView.tsx  SetupWizard.tsx
src/components/calendar/: CalendarView.tsx
src/components/call/: ActiveCallView.tsx  CallControlButton.tsx  CallControls.tsx  CallLineIndicator.tsx  CallTimer.tsx  CallerAvatar.tsx  DtmfOverlay.tsx  IncomingCallOverlay.tsx
src/components/chat/: ActivityFeed.tsx  ChatView.tsx
src/components/dialpad/: DialpadView.tsx
src/components/encryption/: EncryptionBadge.tsx  KeyBackupPrompt.tsx  VerificationDialog.tsx
src/components/files/: FilesView.tsx
src/components/meeting/: LiveKitRoom.tsx  MeetingPanel.tsx
src/components/people/: PeopleView.tsx
src/components/recent/: RecentCallsList.tsx  RecordingsView.tsx  VoicemailView.tsx
src/components/settings/: AudioSettings.tsx  NetworkSettings.tsx  SettingsView.tsx
src/components/shared/: CommandPalette.tsx  ErrorBoundary.tsx  SearchOverlay.tsx
src/components/shell/: AppShell.tsx  BottomNav.tsx  StatusBar.tsx  TitleBar.tsx
src/components/ui/: Badge.tsx  (+6 more)
src/hooks/: useAndroidPermissions.ts  useAutoAway.ts  useCallActions.ts  useConfigLoader.ts  useKeyboardShortcuts.ts  useMatrixEvents.ts  useMeetingReminders.ts  usePlatform.ts  useRingtone.ts  useServerEvents.ts  useSipEvents.ts  useUnreadBadge.ts
src/lib/: adminApi.ts  calendarOccurrences.ts  callTargets.ts  i18n.ts  mediaCapabilities.ts  meetingJoin.ts  mfaLogin.ts  nativeNotify.ts  notificationSound.ts  notifications.ts  pushSubscription.ts  pwa.ts  session.ts  sipDefaults.ts  ssoLogin.ts  tauri.ts
src/locales/: en.json  es.json  fr.json
src/store/: accountStore.ts  activityStore.ts  audioStore.ts  callStore.ts  chatStore.ts  fileStore.ts  matrixStore.ts  meetingStore.ts  presenceStore.ts  serverStore.ts  uiStore.ts
src/test/: calendarOccurrences.test.ts  callTargets.test.ts  i18n.test.ts  mediaCapabilities.test.ts  meetingJoin.test.ts  meetingReminders.test.ts  notifications.test.ts  pwa.test.ts  setup.ts  sipDefaults.test.ts  stores.test.ts  utils.test.ts
src/types/: index.ts
(+3 files in other folders)
