[package]
name = "pale-matrix"
version = "0.1.0"
edition = "2021"
description = "Matrix protocol integration for Pale — chat, file transfer, E2E encryption"

[dependencies]
matrix-sdk = { version = "0.18", features = [
    "e2e-encryption",
    "sqlite",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "fs"] }
log = "0.4"
thiserror = "2"
mime = "0.3"
mime_guess = "2"
