[package]
name = "pale-server"
version = "0.1.1"
license = "GPL-2.0-only"
edition = "2021"
description = "Backend infrastructure server for Pale SIP, files, and conferences"

[features]
default = []
native-pjsip = ["dep:pjsip-sys"]

[dependencies]
axum = "0.8"
tokio = { version = ">=1.44.2, <2", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
chrono = { version = ">=0.4.20, <0.5", features = ["serde"] }
md-5 = "0.10"
pjsip-sys = { path = "../pjsip-sys", optional = true }
rsip = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
base64 = "0.22"
chacha20poly1305 = "0.10"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
# ldap3 0.12 uses rustls 0.23 (avoids rustls-webpki 0.101 GHSA).
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-aws-lc-rs"] }
chrono-tz = "0.10"
rand = "0.8"
regex = "1"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
jsonwebtoken = "9"
url = "2"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
# Prefer modern rustls HTTPS client features from the AWS SDK stack.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "credentials-process", "sso", "default-https-client"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls", "default-https-client"] }
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
jwt-simple = "0.12"
